fix: appointments column overflow + hide scroll bar

--- a/src/components/AppointmentsLayout/_components/DropZone/DropZone-styles.less
+++ b/src/components/AppointmentsLayout/_components/DropZone/DropZone-styles.less
@@ -1,7 +1,8 @@
 .drop-zone {
 	display: grid;
-	grid-template-rows: auto 1fr;
+	grid-template-rows: min-content auto min-content;
 	gap: var(--ant-padding);
+	overflow: hidden;
 
 	&__title-container {
 		display: flex;
@@ -22,20 +23,30 @@
 		}
 	}
 
-	&__drop-zone {
-		display: flex;
-		flex-direction: column;
-		gap: var(--ant-padding-sm);
-		width: 100%;
-		height: 100%;
+	&__list-container {
+		overflow: hidden;
+		overflow-y: auto;
 		background-color: var(--ant-color-bg-layout);
 		padding: var(--ant-padding-sm);
 		border-radius: var(--ant-border-radius);
+		// This trick allows to clip the list items behind the inner border
+		outline: var(--ant-padding-sm) solid var(--ant-color-bg-layout);
+		outline-offset: calc(var(--ant-padding-sm) * -1);
+		// Hide scroll bar
+		scrollbar-width: none;
 
-		.drag-item {
-			background-color: var(--ant-color-bg-elevated);
-			padding: var(--ant-padding-sm);
-			border-radius: var(--ant-border-radius);
+		&__list {
+			display: flex;
+			flex-direction: column;
+			gap: var(--ant-padding-sm);
+			width: 100%;
+			height: 100%;
+
+			.drag-item {
+				background-color: var(--ant-color-bg-elevated);
+				padding: var(--ant-padding-sm);
+				border-radius: var(--ant-border-radius);
+			}
 		}
 	}
 
